# neural_cam_dnn

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  main  setup.cfg  setup.cfg~
custom/road_detector/: road.data  road.data~  road_arch_minor.cfg
extra_main/: main_autolabeller.cpp
msic/: detector.c  main.cpp
onroad_cfg/: README  README~  combo.data~  combo_v3.cfg~  combo_v3.data~  tiny-yolo-voc.cfg~  train.txt
onroad_cfg/full_model_3class/: combo_v4.cfg  combo_v4.cfg~  combo_v4.data  combo_v4.data~
onroad_cfg/tiny_model_3class/: combo_v3.cfg  combo_v3.data  combo_v3.names
src/: detector.c  detector.c~  detector.h~  image.c  image.c~  main.cpp  main.cpp~
src/darknet/: CMakeLists.txt  data.c  image.c
src/main/: CMakeLists.txt  main.cpp
